Upgrade deps to be more in line with other gus projects and modernize some of codebase